implementations/rust/ockam/ockam/tests/node/fail_if_passed_param_is_wrong_type.stderr
error: Expected `ockam::Context` found `std::string::String`
 --> tests/node/fail_if_passed_param_is_wrong_type.rs:5:20
  |
5 | async fn main(ctx: std::string::String) -> Result<()> {
  |                    ^^^^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/node/fail_if_passed_param_is_wrong_type.rs:4:1
  |
4 | / #[ockam::node]
5 | | async fn main(ctx: std::string::String) -> Result<()> {
6 | |     Ok(())
7 | | }
  | |_^ consider adding a `main` function to `$DIR/tests/node/fail_if_passed_param_is_wrong_type.rs`
